# TaxonomySynthesis

./: .bump2version.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  categorizer.ipynb  genesis_v0.ipynb
.github/workflows/: ci.yaml
taxonomy-synthesis/: LICENSE  README.md  pyproject.toml
taxonomy-synthesis/taxonomy_synthesis/classifiers/: classifier_interface.py  embedding_classifier.py  gpt_classifier.py
taxonomy-synthesis/taxonomy_synthesis/generator/: taxonomy_generator.py
taxonomy-synthesis/taxonomy_synthesis/models/: __init__.py  category.py  classified_item.py  item.py  response_item.py
taxonomy-synthesis/taxonomy_synthesis/tree/: node_operator.py  tree_node.py
taxonomy-synthesis/tests/: test_e2e.py  test_gpt_classifier.py  test_models.py  test_node_operator.py  test_taxonomy_generator.py  test_tree_node.py
